Changes in version 0.0.17 - UNRELEASED:
 * dynlib: Search the system library path(s) as the last resort.

Changes in version 0.0.16 - 2017-11-24:
 * Bug 24171: Create the `Caches` directory properly.

Changes in version 0.0.15 - 2017-10-30:
 * Bug 23915: 7.0.7 and later fails to work without `SECCOMP_FILTER_FLAG_TSYNC`.
 * Bug 23166: Add Felix's obfs4 bridges to the built-in bridges.
 * Bug 23943: obfs4proxy crashes on certain systems.
 * Disable the 2017 donation campaign banner.

Changes in version 0.0.14 - 2017-09-29:
 * Bug 8706: Fully disable the .recently-used.xbel.
 * Bug 22814: Revert the upstream fix by default.
 * Bug 23692: Add PR_SET_NO_NEW_PRIVS as an allowed prctl() operation.

Changes in version 0.0.13 - 2017-09-13:
 * Bug 13170: Disable the rest of the Firefox experiments botnet prefs.
 * Bug 23449: Allow `epool_pwait` in the tor seccomp rules.
 * Use lockPref for the IDN override done as part of #22984.
 * Unset the addon autoupdater URL prefs.
 * Disable the "Open with" dialog, which will never work.
 * Use the GCC constructor attribute for stub initialization.

Changes in version 0.0.12 - 2017-08-01:
 * Bug 22969: Disable the addon blocklist.
 * Bug 22984: Force IDNs to be displayed as punycode to thwart homograph
              attacks.
 * Bug 22967: Force disable crashdump reporting.
 * Bug 23058: Apply the SelfRando workaround to 7.5a3 as well.
 * Default disable `dom.securecontext.whitelist_onions`.

Changes in version 0.0.11 - 2017-07-18:
 * Bug 22910: Deprecate the volatile extension dir option.
 * Bug 22932: Add experimental Amnesiac Profile Directory support.

Changes in version 0.0.10 - 2017-07-12:
 * Bug 22829: Remove default obfs4 bridge riemann.
 * Bug 22853: Something in SelfRando is totally brain damaged.
 * Bug 22899: `about:addons`'s "Get Addons" pane is unsafe and should be
              treated as such.
 * Bug 22901: Clarify/expand on the warnings for all the config settings.

Changes in version 0.0.9 - 2017-07-03: